add new header.js, footer.js and refactor of class names

--- a/pages/knowledge.html
+++ b/pages/knowledge.html
@@ -7,56 +7,44 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>knowledge</title>
 </head>
-<body>
-    
-    <header>
-        <div class="navbar">
-            <ul>
-                <li class="home"><a href="/index.html"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="/pages/info.html">Datos Personales</a></li>
-                <li><a href="/pages/education.html">Educación</a></li>
-                <li><a href="/pages/knowledge.html">Conocimientos</a></li>
-                <li><a href="/pages/projects.html">Proyectos</a></li>
-                <li><a href="/pages/workExperience.html">Experiencia Laboral</a></li>
-            </ul>
-        </div> 
-    </header>
 
-   <div class="contenedor">
-       <div class="conocimientos">
+<body>
+
+   <div class="container">
+       <div class="knowledge">
            <h2>Conocimientos</h2>
-           <div class="conocimientosLista">
-                <div class="tarjeta">
+           <div class="knowledge-list">
+                <div class="card">
                     <i class="fa-brands fa-java"></i>
                     <p>JAVA</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-brands fa-python"></i>
                     <p>PYTHON</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-solid fa-database"></i>
                     <p>SQL</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-brands fa-html5"></i>
                     <p>HTML</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-brands fa-css3-alt"></i>
                     <p>CSS</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-brands fa-js"></i>
                     <p>JAVASCRIPT</p>
                 </div>
 
-                <div class="tarjeta">
+                <div class="card">
                     <i class="fa-solid fa-leaf"></i>
                     <p>SPRINGBOOT</p>
                 </div>
@@ -66,14 +54,8 @@
 
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
-    <footer>
-        <p class="subtitulo">Paula M. Dominguez</p>
-        <p>Programadora backend | 2025</p>
-        <ul class="redes-sociales">
-            <li><a href="https://github.com/LNPoly"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/paula-dominguez/"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
-    </footer>
     <script src="js/main.js"></script>
+    <script src="/js/header.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
 </html>
