--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,28 +7,15 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Proyects</title>
 </head>
+
 <body>
-
-    <header>
-        <div class="navbar">
-           <ul>
-                <li class="home"><a href="/index.html"><i class="fa-solid fa-house"></i></a></li>
-               <li><a href="/pages/info.html">Datos Personales</a></li>
-               <li><a href="/pages/education.html">Educación</a></li>
-               <li><a href="/pages/knowledge.html">Conocimientos</a></li>
-               <li><a href="/pages/projects.html">Proyectos</a></li>
-               <li><a href="/pages/workExperience.html">Experiencia Laboral</a></li>
-           </ul>
-       </div>
-    </header>
-
-    <div class="contenedor">
-        <div class="proyectos">
+    <div class="container">
+        <div class="projects">
             <h2>Proyectos</h2>
-            <div class="listaProyectos">
+            <div class="projects-list">
                 <ul>
                     <li>
-                        <h4 class="tituloPro">NO COUNTRY - Proyecto HealthTech (2024)</h4>
+                        <h4 class="title-pro">NO COUNTRY - Proyecto HealthTech (2024)</h4>
                         <p>Dentro del marco de iniciativas de simulaciones laborales que promociona No Country, se trabajó en una Web-app para la realización de turnos médicos, establecer horarios con los distintos doctores y, si es necesario, links de videollamadas.
                         Este proyecto se realizó de manera conjunta con programadores de distintas nacionalidades de forma remota aplicando metodología Scrum y las tecnologías para Backend: Java, SpringBoot y en bases de datos; MySql y para el Frontend:TypeScript y React. <a class="links-pags" href="https://github.com/No-Country-simulation/c20-27-m-java-react"><b>Este es el repositorio del proyecto</b></a> y a continuación puedes ver un video presentación del proyecto
                         
@@ -41,30 +28,30 @@
                     </li><br>
 
                     <li>
-                        <h4 class="tituloPro">JAVA CON SPRING BOOT y EUREKA SERVER - Codeki (2024)</h4>
+                        <h4 class="title-pro">JAVA CON SPRING BOOT y EUREKA SERVER - Codeki (2024)</h4>
                         <p>Proyecto realizado con lenguaje JAVA y aplicando SPRINGBOOT además de incorporar clientes externos para poder realizar distintas funciones. <a class="links-pags" href="https://github.com/LNPoly/codeki-microservicios-flight-ticket-eureka"><b>Acá puedes ver el repositorio del proyecto.</b></a> </p>
                     </li><br>
 
                     <li>
-                        <h4 class="tituloPro">JAVA CON SPRING BOOT (simulador Homebanking - BACKEND) - CAC (2023)</h4>
+                        <h4 class="title-pro">JAVA CON SPRING BOOT (simulador Homebanking - BACKEND) - CAC (2023)</h4>
                         <p>Proyecto JAVA/ SPRINGBOOT realizado mediante un grupo de trabajo con metodología Scrum.<a class="links-pags" href="https://github.com/LNPoly/Homebanking-SpringBoot"><b>Acá puedes ver el repositorio del proyecto.</b></a></p>
                     </li><br>
                     
                     <li>
-                        <h4 class="tituloPro">Página Web CAC - HTML | JAVASCRIPT | CSS (FRONT-END) (2023)</h4>
+                        <h4 class="title-pro">Página Web CAC - HTML | JAVASCRIPT | CSS (FRONT-END) (2023)</h4>
                         <p>Proyecto de emulación de una página web real aplicando conceptos básicos de  HTML, CSS y JAVASCRIPT, además de creación de formularios.
                         <a class="links-pags" href="https://lnpoly.github.io/Codo_A_Codo/"><b>Acá puedes ver la página completa.</b></a></p>
 
-                        <div class="proyectos-tarjetas">
-                            <div class="tarjetaPro">
+                        <div class="projects-tarjetas">
+                            <div class="card-pro">
                                 <img src="/img/CAC-pag.jpg" alt="" width="340">
                             </div>
 
-                            <div class="tarjetaPro">
+                            <div class="card-pro">
                                 <img src="/img/CAC-oradores.jpg" alt="" width="330">
                             </div>
 
-                            <div class="tarjetaPro">
+                            <div class="card-pro">
                                 <img src="/img/CAC-tickets.jpg" alt="" width="200">
                             </div>
                         </div>
@@ -76,15 +63,8 @@
 
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
-    <footer>
-        <p class="subtitulo">Paula M. Dominguez</p>
-        <p>Programadora backend | 2025</p>
-        <ul class="redes-sociales">
-            <li><a href="https://github.com/LNPoly"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/paula-dominguez/"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
-    </footer>
-
     <script src="js/main.js"></script>
+    <script src="/js/header.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
 </html>
