--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>CV PAULA D.</title>
 </head>
+
 <body>
     <header>
          <div class="navbar">
@@ -20,13 +21,13 @@
             </ul>
         </div> 
 
-        <div class="encabezado">
+        <div class="header-title">
             <h1>PAULA M. DOMINGUEZ</h1>
         </div>
     </header>
     
-    <div class="contenedor">
-        <div class="presentacion">
+    <div class="container">
+        <div class="presentation">
             <p>Actualmente me estoy formando en Ciencias de Datos e Inteligencia Artificial y creo que realizar ésta formación, es un paso importante para mi desarrollo dentro de la programación.
             Anteriormente, me he capacitado en backend utilizando JAVA y SpringBoot y realizando distintos proyectos académicos que me resultaron muy útiles para poder aprender de forma más profesional. <br><br>
             Como profesional en formación en el campo de la programación backend, mi objetivo es poder afrontar un desafio acorde a mis conocimientos. Me siento capacitada para poder comenzar una nueva etapa dentro de la programación y que ésta misma, me posibilite seguir creciendo profesionalmente. <br><br>
@@ -39,16 +40,10 @@
                 </video>
             </div> 
         </div>
+
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
-    <footer>
-        <p class="subtitulo">Paula M. Domínguez</p>
-        <p>Programadora backend | 2025</p>
-        <ul class="redes-sociales">
-            <li><a href="https://github.com/LNPoly"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/paula-dominguez/"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
-    </footer>
+
     <script src="js/main.js"></script>
- 
+    <script src="/js/footer.js"></script>
 </body>
 </html>
