--- a/pages/info.html
+++ b/pages/info.html
@@ -7,22 +7,10 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Personal Information</title>
 </head>
+
 <body>
-    <header>
-        <div class="navbar">
-           <ul>
-                <li class="home"><a href="/index.html"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="/pages/info.html">Datos Personales</a></li>
-                <li><a href="/pages/education.html">Educación</a></li>
-                <li><a href="/pages/knowledge.html">Conocimientos</a></li>
-                <li><a href="/pages/projects.html">Proyectos</a></li>
-                <li><a href="/pages/workExperience.html">Experiencia Laboral</a></li>
-           </ul>
-       </div> 
-   </header>
-    
-   <div class="contenedor">
-        <div class="datos-personales">
+   <div class="container">
+        <div class="personal-data">
             <h2>Info personal</h2>
             <div class="datos-lista">
                 <ul>
@@ -33,15 +21,11 @@
             </div>
         </div>
     </div>
+
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
-    <footer>
-        <p class="subtitulo">Paula M. Domínguez</p>
-        <p>Programadora backend | 2025</p>
-        <ul class="redes-sociales">
-            <li><a href="https://github.com/LNPoly"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/paula-dominguez/"><i class="fab fa-linkedin"></i></a></li>
-        </ul>
-    </footer>
+
     <script src="/js/main.js"></script>
+    <script src="/js/header.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
 </html>
