--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/LNPoly/CV-portfolio">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Proyects</title>
@@ -42,7 +43,7 @@
                         <p>Proyecto de emulación de una página web real aplicando conceptos básicos de  HTML, CSS y JAVASCRIPT, además de creación de formularios.
                         <a class="links-pags" href="https://lnpoly.github.io/Codo_A_Codo/"><b>Acá puedes ver la página completa.</b></a></p>
 
-                        <div class="projects-tarjetas">
+                        <div class="projects-cards">
                             <div class="card-pro">
                                 <img src="/img/CAC-pag.jpg" alt="" width="340">
                             </div>
@@ -61,7 +62,7 @@
         </div>
     </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
     <script src="js/main.js"></script>
     <script src="/js/header.js"></script>
