fix: in file path changes

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
     <script src="js/main.js"></script>
-    <script src="/js/footer.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
