--- a/pages/education.html
+++ b/pages/education.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/LNPoly/CV-portfolio">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Education</title>
 </head>
 
@@ -16,7 +16,7 @@
            <div class="education-list">
                <div class="videoEdu">
                    <video height="200" autoplay loop muted>
-                       <source src="/video/books2.mp4" type="video/mp4"> 
+                       <source src="video/books2.mp4" type="video/mp4"> 
                    </video>
                </div> 
                 <ul>
@@ -31,10 +31,10 @@
         </div>
     </div>
        
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
-    <script src="/js/main.js"></script>
-    <script src="/js/header.js"></script>
-    <script src="/js/footer.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
