--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/LNPoly/CV-portfolio">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Proyects</title>
 </head>
 
@@ -22,7 +22,7 @@
                         
                         <div class="videos">
                             <video width="640" height="360" controls autoplay loop muted>
-                                <source src="/video/NoCountry_presentacion_c20-27-m-java-react.mp4" type="video/mp4"> 
+                                <source src="video/NoCountry_presentacion_c20-27-m-java-react.mp4" type="video/mp4"> 
                             </video>
                         </div> 
                         </p>
@@ -45,15 +45,15 @@
 
                         <div class="projects-cards">
                             <div class="card-pro">
-                                <img src="/img/CAC-pag.jpg" alt="" width="340">
+                                <img src="img/CAC-pag.jpg" alt="" width="340">
                             </div>
 
                             <div class="card-pro">
-                                <img src="/img/CAC-oradores.jpg" alt="" width="330">
+                                <img src="img/CAC-oradores.jpg" alt="" width="330">
                             </div>
 
                             <div class="card-pro">
-                                <img src="/img/CAC-tickets.jpg" alt="" width="200">
+                                <img src="img/CAC-tickets.jpg" alt="" width="200">
                             </div>
                         </div>
                     </li>
@@ -62,10 +62,10 @@
         </div>
     </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="/img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
     <script src="js/main.js"></script>
-    <script src="/js/header.js"></script>
-    <script src="/js/footer.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
