fix: in index.html path header

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
          <div class="navbar">
             <ul>
                 <!-- agregar un aboutMe.html-->
-                <li><a href="./pages/info.html">Datos Personales</a></li>
-                <li><a href="./pages/education.html">Educación</a></li>
-                <li><a href="./pages/knowledge.html">Conocimientos</a></li>
-                <li><a href="./pages/projects.html">Proyectos</a></li>
-                <li><a href="./pages/workExperience.html">Experiencia Laboral</a></li>
+                <li><a href="pages/info.html">Datos Personales</a></li>
+                <li><a href="pages/education.html">Educación</a></li>
+                <li><a href="pages/knowledge.html">Conocimientos</a></li>
+                <li><a href="pages/projects.html">Proyectos</a></li>
+                <li><a href="pages/workExperience.html">Experiencia Laboral</a></li>
             </ul>
         </div> 
 
