fix: in flies paths changes general

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             
             <div class="videos">
                 <video width="640" height="360" autoplay loop muted>
-                    <source src="./video/6685581-uhd_3840_2160_30fps.mp4" type="video/mp4"> 
+                    <source src="video/6685581-uhd_3840_2160_30fps.mp4" type="video/mp4"> 
                 </video>
             </div> 
         </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="imagenes/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
     <script src="js/main.js"></script>
     <script src="js/footer.js"></script>
