--- a/pages/projects.html
+++ b/pages/projects.html
@@ -45,15 +45,15 @@
 
                         <div class="projects-cards">
                             <div class="card-pro">
-                                <img src="img/CAC-pag.jpg" alt="" width="340">
+                                <img src="imgenes/CAC-pag.jpg" alt="" width="340">
                             </div>
 
                             <div class="card-pro">
-                                <img src="img/CAC-oradores.jpg" alt="" width="330">
+                                <img src="imgenes/CAC-oradores.jpg" alt="" width="330">
                             </div>
 
                             <div class="card-pro">
-                                <img src="img/CAC-tickets.jpg" alt="" width="200">
+                                <img src="imgenes/CAC-tickets.jpg" alt="" width="200">
                             </div>
                         </div>
                     </li>
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="img/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="imagenes/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
     <script src="js/main.js"></script>
     <script src="js/header.js"></script>
