fix: in file path changes 2

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -45,15 +45,15 @@
 
                         <div class="projects-cards">
                             <div class="card-pro">
-                                <img src="imgenes/CAC-pag.jpg" alt="" width="340">
+                                <img src="imagenes/CAC-pag.jpg" alt="" width="340">
                             </div>
 
                             <div class="card-pro">
-                                <img src="imgenes/CAC-oradores.jpg" alt="" width="330">
+                                <img src="imagenes/CAC-oradores.jpg" alt="" width="330">
                             </div>
 
                             <div class="card-pro">
-                                <img src="imgenes/CAC-tickets.jpg" alt="" width="200">
+                                <img src="imagenes/CAC-tickets.jpg" alt="" width="200">
                             </div>
                         </div>
                     </li>
