--- a/pages/knowledge.html
+++ b/pages/knowledge.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <base href="/CV-portfolio/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <title>knowledge</title>
 </head>
 
@@ -55,8 +55,8 @@
 
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
-    <script src="js/main.js"></script>
-    <script src="js/header.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/header.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
 </html>
