--- a/pages/knowledge.html
+++ b/pages/knowledge.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
     <base href="/CV-portfolio/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>knowledge</title>
 </head>
 
@@ -14,49 +14,48 @@
    <div class="container">
        <div class="knowledge">
            <h2>Conocimientos</h2>
-           <div class="knowledge-list">
-                <div class="card">
-                    <i class="fa-brands fa-java"></i>
-                    <p>JAVA</p>
-                </div>
+            <div class="content">
+                <div class="language">
+                    <h4 class="title-pro">Lenguajes</h4>
+                    <ul>
+                        <li><i class="fa-brands fa-java"></i></li>
+                        <li><i class="fa-brands fa-python"></i></li>
+                    </ul>
+               </div>
 
-                <div class="card">
-                    <i class="fa-brands fa-python"></i>
-                    <p>PYTHON</p>
-                </div>
+               <div class="database">
+                    <h4 class="title-pro">Bases de datos</h4>
+                    <ul>
+                        <li><i class="fa-solid fa-database"></i></li>
+                    </ul>
+               </div>
 
-                <div class="card">
-                    <i class="fa-solid fa-database"></i>
-                    <p>SQL</p>
-                </div>
-
-                <div class="card">
-                    <i class="fa-brands fa-html5"></i>
-                    <p>HTML</p>
-                </div>
-
-                <div class="card">
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <p>CSS</p>
-                </div>
-
-                <div class="card">
-                    <i class="fa-brands fa-js"></i>
-                    <p>JAVASCRIPT</p>
-                </div>
-
-                <div class="card">
-                    <i class="fa-solid fa-leaf"></i>
-                    <p>SPRINGBOOT</p>
-                </div>
-            </div>
+               <div class="web">
+                    <h4 class="title-pro">Desarrollo web</h4>
+                    <ul>
+                        <li><i class="fa-brands fa-html5"></i></li>
+                        <li><i class="fa-brands fa-css3-alt"></i></li>
+                        <li><i class="fa-brands fa-js"></i></li>
+                    </ul>
+               </div>
+    
+               <div class="framework">
+                    <h4 class="title-pro">Frameworks</h4>
+                    <ul>
+                        <li><i class="fa-solid fa-leaf"></i></li>
+                    </ul>
+               </div>
+            </div> 
+            <h2>Capacitación actual</h2>
+            <p>Me estoy capacitando para adquirir conocimientos básicos en R para análisis de datos estadísticos, profundizando y fortaleciendo los ya adquiridos con Python, Java con SpringBoot.</p>
+    
         </div>
     </div>
 
     <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
 
-    <script src="/js/main.js"></script>
-    <script src="/js/header.js"></script>
-    <script src="/js/footer.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
