changes in education.html file

--- a/pages/education.html
+++ b/pages/education.html
@@ -20,12 +20,12 @@
                    </video>
                </div> 
                 <ul>
-                    <li>Tecnicatura en Desarrollo de ciencias de datos - IFTS N° 18 - 2024 - en curso</li>
+                    <li>IFTS N° 18 - Tecnicatura en Desarrollo de ciencias de datos - 2024 - en curso</li>
                     <li>Aprendizaje a lo largo de la vida (Gob de la Ciudad de Bs. As.) - Codo a codo SPRINGBOOT 2023</li>
-                    <li>Aprendizaje a lo largo de la vida (Gob de la Ciudad de Bs. As.) - Codo a codo FullStack JAVA     2023</li>
-                    <li>CFP N° 18 Trayecto Programador - Gobierno de la Ciudad de Buenos Aires 2022</li>
-                    <li>Licenciatura en Artes Visuales - UNA - 2015 /2019</li>
-                    <li>INSTITUTO NUEVA ESCUELA DE DISEÑO Y COMUNICACIÓN Diseñadora gráfica publicitaria 2006</li>
+                    <li>Aprendizaje a lo largo de la vida (Gob de la Ciudad de Bs. As.) - Codo a codo FullStack JAVA 2023</li>
+                    <li>CFP N° 18 - Trayecto Programador - Gobierno de la Ciudad de Buenos Aires 2022</li>
+                    <li>Universidad Nacional de las Artes - Lic. en Artes Visuales -  2015/2019</li>
+                    <li>Instituto Nueva Escuela de Diseño y Comunicación - Diseñadora gráfica publicitaria 2006</li>
                 </ul>
             </div>
         </div>
