--- a/pages/info.html
+++ b/pages/info.html
@@ -16,9 +16,12 @@
             <div class="datos-lista">
                 <ul>
                     <li><i class="fa-solid fa-phone"></i> Teléfono: +54 11 3128-7180</li>
-                    <li><i class="fa-solid fa-location-dot"></i> Domicilio: Villa General Mitre, CABA</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Domicilio: La Paternal, CABA</li>
                     <li><i class="fa-solid fa-envelope"></i> Correo Electronico: paula.dominguez2205@gmail.com</li>
                 </ul>
+            </div>
+            <div class="map">
+
             </div>
         </div>
     </div>
@@ -28,5 +31,6 @@
     <script src="js/main.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
+    
 </body>
 </html>
