general changes in html files

--- a/pages/knowledge.html
+++ b/pages/knowledge.html
@@ -18,7 +18,7 @@
                 <p class="description">Me destaco en desarrollo de software y busco la forma escribir código limpio, eficiente y fácil de mantener. Realizo CRUDs optimizados, y me aseguro de que cada endpoint funcione de manera eficiente y esté verificado. <br><br>
                     Reviso la calidad del código a través de refactorización y aplicar un manejo de excepciones sólido para garantizar la estabilidad de las aplicaciones. <br>
                     <br>
-                    Trabajo con Python y Java, dominando frameworks y herramientas como Spring Boot, Maven, JPA, JSP e Hibernate. También me desenvuelvo en desarrollo web con HTML, CSS y JavaScript (tengo como objetivo capacitarme a futuro con React para poder complementar el área del FrontEnd).
+                    Trabajo con Python y Java, diseñando microservicios, dominando frameworks y herramientas como Spring Boot, Maven, JPA, JSP e Hibernate. También me desenvuelvo en desarrollo web con HTML, CSS y JavaScript (tengo como objetivo capacitarme a futuro con React para poder complementar el área del FrontEnd).
                     Uso Git para control de versiones y Postman y Swagger para probar y documentar APIs y trabajando con bases de datos MySQL para asegurar una integración completa en cada proyecto. <br><br>
                     Siempre estoy buscando aprender y mejorar, enfrentando nuevos desafíos con entusiasmo y compromiso. <br><br></p>
             </div>         
