--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,7 +30,7 @@
 
                     <li>
                         <h4 class="title-pro">JAVA CON SPRING BOOT y EUREKA SERVER - Codeki (2024)</h4>
-                        <p>Proyecto realizado con lenguaje JAVA y aplicando SPRINGBOOT además de incorporar clientes externos para poder realizar distintas funciones. <a class="links-pags" href="https://github.com/LNPoly/codeki-microservicios-flight-ticket-eureka"><b>Acá puedes ver el repositorio del proyecto.</b></a> </p>
+                        <p>Proyecto realizado con lenguaje JAVA utilizando SPRINGBOOT y aplicando microservicios, además de incorporar clientes externos para poder realizar distintas funciones. <a class="links-pags" href="https://github.com/LNPoly/codeki-microservicios-flight-ticket-eureka"><b>Acá puedes ver el repositorio del proyecto.</b></a> </p>
                     </li><br>
 
                     <li>
