add: responsive for all HTML files

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,8 +17,8 @@
                 <ul>
                     <li>
                         <h4 class="title-pro">NO COUNTRY - Proyecto HealthTech (2024)</h4>
-                        <p>Dentro del marco de iniciativas de simulaciones laborales que promociona No Country, se trabajó en una Web-app para la realización de turnos médicos, establecer horarios con los distintos doctores y, si es necesario, links de videollamadas.
-                        Este proyecto se realizó de manera conjunta con programadores de distintas nacionalidades de forma remota aplicando metodología Scrum y las tecnologías para Backend: Java, SpringBoot y en bases de datos; MySql y para el Frontend:TypeScript y React. <a class="links-pags" href="https://github.com/No-Country-simulation/c20-27-m-java-react"><b>Este es el repositorio del proyecto</b></a> y a continuación puedes ver un video presentación del proyecto
+                        <p>Dentro del marco de iniciativas de simulaciones laborales que promociona No Country, se trabajó en una Web-app para la realización de turnos médicos, establecer horarios con los distintos doctores y, si es necesario, links de videollamadas. <br>
+                        Este proyecto se realizó de manera conjunta con programadores de distintas nacionalidades de forma remota aplicando metodología Scrum y las tecnologías para Backend: Java, SpringBoot y en bases de datos; MySql y para el Frontend:TypeScript y React. <br> <a class="links-pags" href="https://github.com/No-Country-simulation/c20-27-m-java-react"><b>Este es el repositorio del proyecto</b></a> y a continuación puedes ver un video presentación.
                         
                         <div class="videos">
                             <video width="640" height="360" controls autoplay loop muted>
@@ -30,30 +30,30 @@
 
                     <li>
                         <h4 class="title-pro">JAVA CON SPRING BOOT y EUREKA SERVER - Codeki (2024)</h4>
-                        <p>Proyecto realizado con lenguaje JAVA utilizando SPRINGBOOT y aplicando microservicios, además de incorporar clientes externos para poder realizar distintas funciones. <a class="links-pags" href="https://github.com/LNPoly/codeki-microservicios-flight-ticket-eureka"><b>Acá puedes ver el repositorio del proyecto.</b></a> </p>
+                        <p>Proyecto realizado con lenguaje JAVA utilizando SPRINGBOOT y aplicando microservicios, además de incorporar clientes externos para poder realizar distintas funciones. <br> <a class="links-pags" href="https://github.com/LNPoly/codeki-microservicios-flight-ticket-eureka"><b>Acá puedes ver el repositorio del proyecto.</b></a> </p>
                     </li><br>
 
                     <li>
                         <h4 class="title-pro">JAVA CON SPRING BOOT (simulador Homebanking - BACKEND) - CAC (2023)</h4>
-                        <p>Proyecto JAVA/ SPRINGBOOT realizado mediante un grupo de trabajo con metodología Scrum.<a class="links-pags" href="https://github.com/LNPoly/Homebanking-SpringBoot"><b>Acá puedes ver el repositorio del proyecto.</b></a></p>
+                        <p>Proyecto JAVA/ SPRINGBOOT realizado mediante un grupo de trabajo con metodología Scrum. <br> <a class="links-pags" href="https://github.com/LNPoly/Homebanking-SpringBoot"><b>Acá puedes ver el repositorio del proyecto.</b></a></p>
                     </li><br>
                     
                     <li>
                         <h4 class="title-pro">Página Web CAC - HTML | JAVASCRIPT | CSS (FRONT-END) (2023)</h4>
-                        <p>Proyecto de emulación de una página web real aplicando conceptos básicos de  HTML, CSS y JAVASCRIPT, además de creación de formularios.
+                        <p>Proyecto de emulación de una página web real aplicando conceptos básicos de  HTML, CSS y JAVASCRIPT, además de creación de formularios. <br>
                         <a class="links-pags" href="https://lnpoly.github.io/Codo_A_Codo/"><b>Acá puedes ver la página completa.</b></a></p>
 
                         <div class="projects-cards">
                             <div class="card-pro">
-                                <img src="images/CAC-pag.jpg" alt="" width="340">
+                                <img class="home" src="images/CAC-pag.jpg" alt="">
                             </div>
 
                             <div class="card-pro">
-                                <img src="images/CAC-oradores.jpg" alt="" width="330">
+                                <img class="orator" src="images/CAC-oradores.jpg" alt="">
                             </div>
 
                             <div class="card-pro">
-                                <img src="images/CAC-tickets.jpg" alt="" width="200">
+                                <img class="tickets" src="images/CAC-tickets.jpg" alt="">
                             </div>
                         </div>
                     </li>
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paula :)%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg"></a>
 
     <script src="js/main.js"></script>
     <script src="js/header.js"></script>
