--- a/pages/workExperience.html
+++ b/pages/workExperience.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg"></a>
 
     <script src="js/main.js"></script>
     <script src="js/header.js"></script>
