--- a/pages/education.html
+++ b/pages/education.html
@@ -15,7 +15,7 @@
            <h2>Educación y cursos</h2>
            <div class="education-list">
                <div class="videoEdu">
-                   <video height="200" autoplay loop muted>
+                   <video autoplay loop muted>
                        <source src="video/books2.mp4" type="video/mp4"> 
                    </video>
                </div> 
@@ -31,7 +31,7 @@
         </div>
     </div>
        
-    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg" style="width: 4rem; height: 4rem;"></a>
+    <a target="_blank" href="https://api.whatsapp.com/send?phone=5491131287180&text=Hola%20,%20soy%20Paulita%20"><img class="fixed-whatsapp-button" src="images/whatsapp2.svg"></a>
 
     <script src="js/main.js"></script>
     <script src="js/header.js"></script>
