update content: proyects.html and workExperience.html

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,6 +16,12 @@
             <div class="projects-list">
                 <ul>
                     <li>
+                        <h4 class="title-pro">NO COUNTRY - Proyecto ClassKit (2025)</h4>
+                        <p>Dentro del marco de iniciativas de simulaciones laborales que promociona No Country, se trabajó en una Web-app para la realización de reservas de material didáctico o salas para distintas actividades dentro de los distintos establecimientos educativos, estableciendo día y horario de reserva y verificación de stock tanto del material como sala a reservar<br>
+                        Este proyecto se realizó de manera conjunta con programadores de distintas nacionalidades de forma remota aplicando metodología Scrum y las tecnologías para Backend: Java, SpringBoot, SpringSecurity con autenticación JWT y en bases de datos; MySql, la documentación se realizó con Swagger y para el Frontend:TypeScript, Tailwind y React. <br> <a class="links-pags" href="https://www.youtube.com/watch?v=ccEWaZaiNXg"><b>Aquí puedes ves un video presentación </b></a>de como sería el funcionamiento de la app y <a class="links-pags" href="https://github.com/No-Country-simulation/c20-27-m-java-react"><b>aquí puedes ver el repositorio del proyecto.</b></a>
+                        </p>
+                    </li><br>
+                    <li>
                         <h4 class="title-pro">NO COUNTRY - Proyecto HealthTech (2024)</h4>
                         <p>Dentro del marco de iniciativas de simulaciones laborales que promociona No Country, se trabajó en una Web-app para la realización de turnos médicos, establecer horarios con los distintos doctores y, si es necesario, links de videollamadas. <br>
                         Este proyecto se realizó de manera conjunta con programadores de distintas nacionalidades de forma remota aplicando metodología Scrum y las tecnologías para Backend: Java, SpringBoot y en bases de datos; MySql y para el Frontend:TypeScript y React. <br> <a class="links-pags" href="https://github.com/No-Country-simulation/c20-27-m-java-react"><b>Este es el repositorio del proyecto</b></a> y a continuación puedes ver un video presentación.
