--- a/pages/workExperience.html
+++ b/pages/workExperience.html
@@ -15,6 +15,11 @@
             <div class="work-list">
                 <ul>
                     <li>
+                        <h4 class="title-pro">Niñera</h4>
+                        <p><b>2019 - 2024:</b> Responsable del cuidado de un menor en los momentos de ausencia de los padres por motivos laborales. Me encargaba de retirar al menor del establecimiento educativo, darle la merienda y esperar el regreso de los padres al domicilio.</p><br>
+                        </p><br>
+                    </li>
+                    <li>
                         <h4 class="title-pro">Telemarketing (Operadora de cobranzas)</h4>
                         <p><b>Recsa(2015):</b> Mediante la realización de distintas campañas de llamadas salientes, contactaba a clientes de Cablevisión para poder saldar pagos adeudados de hasta 60 días (mora temprana).Además realizaba cobros con tarjeta de crédito, altas de débito automático y actualizaciones de la base de datos de los clientes.</p><br>
                         <p><b>ProAction Services (2014):</b> Mediante la realización de distintas campañas de llamadas salientes, contactaba a clientes de Banco Francés con el fin de actualizar la base de datos confirmando los paquetes adquiridos por el cliente e informar de montos adeudados (mora temprana).Además realizaba cobros con tarjeta de crédito, altas de débito automático.</p><br>
